Fix form layout bug

--- a/styles.css
+++ b/styles.css
@@ -51,19 +51,18 @@ form {
     margin-bottom: 4%;
     box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.2);
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
 }
  .groups {
     display: flex;
-    margin-bottom: 5%;
+    margin-bottom: 0;
  }
 
  .elements {
     display: flex;
     flex-direction: column;
     margin-left: 5%;
-    gap: 7%;
+    margin-bottom: 2%;
  }
 
  label {
